# gs_backend

./: .coverage  .env.exemple  .gitignore  README.md  pyproject.toml  requirements.txt
src/gs_backend/: database.py  main.py  models.py  schemas.py  settings.py
src/static_files/: index.html
src/static_files/pages/: pagina1.html  quiz.html
src/static_files/src/css/: pagina1.css  quiz.css  style.css
src/static_files/src/js/: index.js  quiz.js
src/static_files/src/pages/: quiz.html
src/webscrapping/: filter.py  main.py  utils.py
tests/: conftest.py  test_main.py  teste.py
